# pgvector_workbench

./: .gitignore  IMPROVEMENTS_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  TASKS.md  WHATS_NEW.md  api_response.json  run1.ps1
backend/: README.md  api.py  auth.py  database.py  export_utils.py  main.py  pyproject.toml  requirements.txt  session_manager.py  vector_utils.py
backend/migrations/: 003_saved_queries_bookmarks.sql
backend/src/pgvector_workbench/: __init__.py  connection_manager.py  database.py  exceptions.py  query_executor.py  vector_operations.py
docs/: feature-1-vector-visualization-dashboard.md  feature-2-saved-queries-bookmarks.md  feature-3-dark-mode-theme-system.md  improvements-roadmap.md  tasks.md  top-3-features-executive-summary.md  top-3-features-implementation.md
frontend/: README.md  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/database/: auth-panel.tsx  connection-form.tsx  database-workbench.tsx  export-button.tsx  header.tsx  saved-queries-dialog.tsx  search-interface.tsx  table-data.tsx  table-metadata.tsx  table-view.tsx  tables-list.tsx  token-visualizer.tsx  vector-visualization.tsx
frontend/src/components/providers/: notification-provider.tsx  store-hydration.tsx
frontend/src/components/ui/: command-palette.tsx  empty-state.tsx  kbd.tsx  keyboard-shortcuts-help.tsx  progress-bar.tsx  theme-toggle.tsx  toast.tsx
frontend/src/hooks/: use-keyboard.ts  use-toast.ts
frontend/src/stores/: auth.ts  database.ts
