[project]
name = "pgvector-workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Santosh Kanumuri", email = "dkanumur@ttu.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
pgvector-workbench = "pgvector_workbench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
